# serializer version: 1
# name: test_feature_spec_version_deterministic
  'eded67864d72c8aa6a753ec90f12371feb7c2200747672aaa80cb5d404a5324f'
# ---
# name: test_feature_spec_version_includes_all_properties
  '58b32de79482ec371a16fce9eabe07c9a9ec4d248a3b733b53f57038cab91fc8'
# ---
# name: test_feature_spec_version_recorded_in_metadata_store
  dict({
    'feature_key': 'recorded/feature',
    'metaxy_feature_spec_version': '72471e8bfba84439e4814b65bee1589a56f702592f4068ef30c61167bb6781aa',
    'metaxy_feature_version': '0c7b2d83252fbf2f689bec7d37c4f7ffb103755d11eafabc1e000a372f415d83',
    'metaxy_snapshot_version': '14d4294da40f4ab27ca85eb739fffd70e92c92522dbcba995cfa2aa343988bf3',
  })
# ---
# name: test_feature_spec_version_stored_in_snapshot
  dict({
    'feature_class_path': 'test_spec_version.SnapshotFeature',
    'feature_spec': dict({
      'deps': list([
      ]),
      'fields': list([
        dict({
          'code_version': '1',
          'deps': list([
          ]),
          'key': list([
            'data',
          ]),
        }),
      ]),
      'id_columns': list([
        'sample_uid',
      ]),
      'key': list([
        'snapshot',
        'test',
      ]),
      'lineage': dict({
        'relationship': dict({
          'type': '1:1',
        }),
      }),
      'metadata': dict({
      }),
    }),
    'metaxy_feature_spec_version': 'cc4b71667ebc22d4c7c90991c87fc89547645468b911e85a0f818d634b5c5303',
    'metaxy_feature_version': '7cfde77960e3cf10327e9cb97f311418b101fc5ee2c146922a997306e318edaf',
    'metaxy_full_definition_version': '8700f186256ee7981173b22c778e858487d775509b8cad74bb038e2fea858cfa',
    'project': 'test',
  })
# ---
# name: test_feature_spec_version_with_column_selection_and_rename
  'b24bb3d39be8d573d61c273a13e4fa63c4646fd7ba1fa9fc6a51fe5dcbb1cd03'
# ---
# name: test_feature_spec_version_with_multiple_complex_deps
  '59732ad1dd1c7112e7de0de495426bbf2e423a68d548246b9382a33aba899341'
# ---
